<resources>
    <string name="app_name">Nimble Assessment</string>
    <string name="order_now">Order now</string>
    <string name="label_name">Name:</string>
    <string name="label_address">Address:</string>
    <string name="hours_label">Hours:</string>
    <string name="label_phone_no">Phone no:</string>
    <string name="pharmacy_information">Pharmacy information</string>
    <string name="retry">Retry</string>
    <string name="error_label">Error loading data. Please try again.</string>
    <string name="available_medications">Available medications</string>
    <string name="selected_medications">Selected medications</string>
    <string name="order">Order</string>
    <string name="ordered">Ordered</string>
</resources>