<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/LabelTextViewStyle"
        tools:text="ReCept"
        app:layout_constraintTop_toTopOf="@id/label_name"
        app:layout_constraintStart_toEndOf="@id/label_name"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_address"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/LabelTextViewStyle"
        android:text="@string/label_address"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/label_name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/LabelTextViewStyle"
        tools:text="605 1ST AVE, SEATTLE, WA, 98104"
        app:layout_constraintTop_toTopOf="@id/label_address"
        app:layout_constraintStart_toEndOf="@id/label_address"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_hours"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/LabelTextViewStyle"
        android:text="@string/hours_label"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/LabelTextViewStyle"
        app:layout_constraintTop_toTopOf="@id/label_hours"
        app:layout_constraintStart_toEndOf="@id/label_hours"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_phone_no"
        android:layout_width="@dimen/label_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/LabelTextViewStyle"
        android:text="@string/label_phone_no"
        app:layout_constraintTop_toBottomOf="@id/hours"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/LabelTextViewStyle"
        tools:text="+132360152912"
        app:layout_constraintTop_toTopOf="@id/label_phone_no"
        app:layout_constraintStart_toEndOf="@id/label_phone_no"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>